<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/switchesLabel_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pref_switches_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/switches_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchesLabel_tv">

        <ToggleButton
            android:id="@+id/approved_tb"
            style="@style/PreferenceToggleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:textColorHighlight="@color/lightGrey"
            android:textOff="@string/pref_approved"
            android:textOn="@string/pref_approved" />

        <ToggleButton
            android:id="@+id/submitted_tb"
            style="@style/PreferenceToggleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOn="@string/pref_submitted"
            android:textOff="@string/pref_submitted" />

        <ToggleButton
            android:id="@+id/rejected_tb"
            style="@style/PreferenceToggleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOn="@string/pref_rejected"
            android:textOff="@string/pref_rejected" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>