<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sync_menu_item"
        android:icon="@drawable/ic_sync_white"
        android:title="@string/sync_contest"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sort_menu_item"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom"
        android:title="@string/sort">

        <menu>
            <item android:id="@+id/sort_subscribed_first"
                android:title="@string/sort_by_subscription" />
            <item android:id="@+id/sort_by_name"
                android:title="@string/sort_by_name" />
            <item android:id="@+id/sort_by_start_date"
                android:title="@string/sort_by_start_date" />
            <item android:id="@+id/sort_by_number_of_contestants"
                android:title="@string/sort_by_number_of_contestants" />
            <item android:id="@+id/sort_by_number_of_problems"
                android:title="@string/sort_by_number_of_problems" />
        </menu>

    </item>

    <item
        android:id="@+id/settings_menu_item"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="ifRoom"
        android:title="@string/preferences"/>

</menu>